added arangoDB insertion in registerCommand in addition to db initialisation files