@@ -5,10 +5,10 @@ import CommandDesign.CommandsHelp;
 import io.minio.MinioClient;
 import io.minio.Result;
 import io.minio.messages.Item;
-import sun.misc.BASE64Encoder;
 
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.logging.Logger;
 
 public class GetAllProfilePicturesCommand extends Command {
@@ -35,8 +35,9 @@ public class GetAllProfilePicturesCommand extends Command {
                         byte[] imageBytes = new byte[(int) item.size()];
                         is.read(imageBytes, 0, imageBytes.length);
                         is.close();
-                        BASE64Encoder encoder = new BASE64Encoder();
-                        String imgBase64 = encoder.encode(imageBytes);
+
+                        byte[] encoded = Base64.getEncoder().encode(imageBytes);
+                        String imgBase64 = new String(encoded);
                         pictures.add(imgBase64);
                     }
                     responseJson.put("app", parameters.get("app"));
